ENH: change model and add prompt

--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     {
       "title": "Aveda 04",
       "image": "aveda/04.jpg",
-      "prompt": "Design a new logo for the Aveda brand that is modern, elegant, and timeless. The logo should be a wordmark, using a custom-designed serif font. The letters should be well-spaced and balanced, creating a sense of harmony and sophistication. The color of the logo should be a dark, rich green, reflecting the brand's connection to nature."
+      "prompt": "Design a new logo for the Aveda brand that is modern, elegant, and timeless. The logo should be a wordmark, using a custom-designed serif font. The letters should be well-spaced and balanced, creating a sense of harmony and sophistication. The color of the logo should be a dark, rich green, reflecting the brand's connection to natureand return me the only logo."
     },
     {
       "title": "Aveda 05",
@@ -68,7 +68,7 @@
     {
       "title": "Aveda 14",
       "image": "aveda/14.jpg",
-      "prompt": "Design a new in-store experience for Aveda that will help customers to connect with the brand on a deeper level. The experience could include a consultation with a beauty expert, a hand massage with an Aveda product, or a workshop on how to create a natural makeup look. The goal of the experience is to create a sense of community and to educate customers about the benefits of using Aveda products."
+      "prompt": "Design a new in-store experience for Aveda that will help customers to connect with the brand on a deeper level. The experience could include a consultation with a beauty expert, a hand massage with an Aveda product, or a workshop on how to create a natural makeup look. The goal of the experience is to create a sense of community and to educate customers about the benefits of using Aveda products and create new image"
     },
     {
       "title": "Aveda 15",
